<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <ImageView
        android:id="@+id/imgDetailAct_PlacePicture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:src="@mipmap/add_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/iBtnDetailAct_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetailAct_PlacePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/imgDetailAct_PlacePicture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/direction" />

    <ImageButton
        android:id="@+id/iBtnDetailAct_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetailAct_PlacePicture"
        app:layout_constraintStart_toEndOf="@+id/iBtnDetailAct_Description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/edit" />

    <ImageButton
        android:id="@+id/iBtnDetailAct_Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:background="?android:selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetailAct_PlacePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/iBtnDetailAct_Edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/delete" />

    <TextView
        android:id="@+id/txtAddEditlAct_PlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/text_place_name"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetailAct_PlacePicture" />

    <EditText
        android:id="@+id/edtAddEditAct_PlaceName"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddEditlAct_PlaceName" />

    <TextView
        android:id="@+id/txtAddEditAct_PlaceAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_place_address"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddEditAct_PlaceName" />

    <EditText
        android:id="@+id/edtDetailAct_PlaceAddress"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddEditAct_PlaceAddress" />

    <TextView
        android:id="@+id/txtDetailAct_PlaceDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_place_description"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDetailAct_PlaceAddress" />

    <EditText
        android:id="@+id/edtDetailAct_PlaceDescription"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="none"
        android:enabled="false"
        android:outlineAmbientShadowColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDetailAct_PlaceDescription" />

</android.support.constraint.ConstraintLayout>